working on new ap

--- a/src/host/templates/status_report.html
+++ b/src/host/templates/status_report.html
@@ -136,7 +136,7 @@
             {% endfor %}
         </ul>
         <h3 class="green-text">Status Report</h3>
-        <ul id="status">
+        <ul id="status_list">
             {% for item in status %}
                 <li class="white-text"><span class="nice_teal">{{item['name']}}</span> Reported: <span class="orange-text">{{item['message']}}</span></li>
             {% endfor %}
