--- a/src/host/templates/Command.html
+++ b/src/host/templates/Command.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>https://usu.cse.spacecraftemulator.com</title>
     <script src="page_manigure.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <style>
         body{
             background-color: #050505;
@@ -31,7 +32,7 @@
             border-radius: 5px;
         }
 
-        input[type="submit"] {
+        .button_formatt {
             background-color: #4caf50;
             color: #fff;
             padding: 10px 20px;
@@ -39,12 +40,20 @@
             border-radius: 5px;
             cursor: pointer;
         }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
         .white-text{
             color: #ccc;
+        }
+        .green-text{
+            color: green;
+        }
+        .orange-text{
+            color: rgb(229, 94, 10);
+        }
+        .blue-text{
+            color: blue; /* Set text color to blue */
+        }
+        .nice_teal{
+            color: rgb(59, 181, 226);
         }
         /* Style for the tabs container */
         .tab-container {
@@ -83,6 +92,24 @@
         .item {
             margin-right: 10px; /* Optional: Add margin between items */
         }
+
+        /* Add any additional styles as needed */
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+            box-shadow: 0 0 2px rgb(255, 254, 254);
+        }
+
+        tr:hover {
+            background-color: #f5f5f5;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -93,6 +120,36 @@
         <div class="tab" onclick="open_tab('Status Report')">Status Report</div>
         <div class="tab" onclick="open_tab('Data Stream')">Data Stream</div>
         <div class="tab" onclick="open_tab('Sensor')">Sensor</div>
+    </div>
+    <h2 class="green-text"> Commands: </h2>
+    <table>
+        <thead>
+            <tr class = "orange-text">
+                <th>Name</th>
+                <th>Path</th>
+                <th>Discription</th>
+            </tr>
+            <tbody>
+                {% for item in table_data %}
+                    <tr data-path ="{{ item.Path }}" onclick="update_run_arg_box(this)">
+                        <td class = 'nice_teal'>{{ item.Name }}</td>
+                        <td class = 'nice_teal'>{{ item.Path }}</td>
+                        <td class = 'nice_teal'>{{ item.Discription }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </thead>
+    </table>
+    <div>
+        <h2 class="green-text"> Run commands interface: </h2>
+    </div>
+    <form>
+        <label class = "white-text" for="user_text">Enter args for commands:</label>
+        <input type="text" id="commands_args" placeholder="Type Args...">
+        <button class = "button_formatt" onclick="run_command()">Submit</button>
+    </form>
+    <div>
+        <h3 class="green-text" id="Report">No return val yet.</h3>
     </div>
 </body>
 </html>
