--- a/src/host/templates/data_stream.html
+++ b/src/host/templates/data_stream.html
@@ -122,6 +122,9 @@
         .red-text{
             color: red;
         }
+        .orange-text{
+            color: rgb(229, 94, 10);
+        }
     </style>
 </head>
 <body>
@@ -140,30 +143,26 @@
             <input type="text" id="boud_rate" placeholder="EX: 9600">
         </div>
         <div class="box_style">
-            <label class = "white-text" for="user_text">Parity? </label>
-            <input type="text" id="parity" placeholder="Even/Odd/None">
-        </div>
-        <div class="box_style">
             <label class = "white-text" for="user_text">Enter stop bits: </label>
             <input type="text" id="stop_bit" placeholder="EX: 1">
         </div>
     </div>
     <div class="container">
-        <button class = "button_formatt" onclick="send_serial_request()">Submit</button>
+        <button class = "button_formatt" onclick="send_serial_reconfig_request()">Submit</button>
         <div class="box_style">
             <div class="green-text" id="result_serial_config">Serial Report</div>
         </div>
     </div>
     <div class="container">
+        <div class="orange-text" id="reader_status_text">Reader Status: </div>
         <div class="status-circle status-red" id = "reader_status"></div>
-        <span class="red-text" id = "reader_status_text">Reader Offline</span>
     </div>
     <div class="container">
+        <div class="orange-text" id="writter_status_text">Writter Status: </div>
         <div class="status-circle status-red" id="writter_status"></div>
-        <span class="red-text" id="writter_status_text">Writter Offline</span>
     </div>
 
-    <canvas id="myLineChart" width="400" height="150"></canvas>
+    <canvas id="myLineChart" width="400" height="100"></canvas>
 
     <script>
         var ctx = document.getElementById('myLineChart').getContext('2d');
@@ -211,41 +210,47 @@
 
         // Update the line chart every second
         setInterval(function() {
-            // fetch('/serial_running_listener')
-            //     .then(response => response.text())
-            //     .then(dat => {
-            //         if (data == 'Online')
-            //         {
-            //             var status = document.getElementById('reader_status');
-            //             status.classList.remove('status-red');
-            //             status.classList.add('status-green');
-            //             document.getElementById('reader_status_text').inenrText = "Reader Online";   
-            //         }
-            //     })
-            //     .catch(error => {
-            //         document.getElementById('reader_status_text').inenrText = "Error getting report for reader";   
-            //     });
-            // fetch('/serial_running_writter')
-            //     .then(response => response.text())
-            //     .then(dat => {
-            //         if (data == 'Online')
-            //         {
-            //             var status = document.getElementById('writter_status');
-            //             status.classList.remove('status-red');
-            //             status.classList.add('status-green');
-            //             document.getElementById('writter_status_text').inenrText = "Writter Online";   
-            //         }
-            //     })
-            //     .catch(error => {
-            //         document.getElementById('writter_status_text').inenrText = "Error getting report for writter";   
-            //     });
-            fetch('/get_serial_info_update')  // Assume a Flask route to get updated data
-                .then(response => response.json())
+            fetch('/serial_running_listener')
+                .then(response => response.text())
                 .then(data => {
-                    updateLineChart(data);
-                })
-                .catch(error => {
-                    console.error('Error fetching data:', error);
+                    if (data == 'Online')
+                    {
+                        var status = document.getElementById('reader_status');
+                        status.classList.remove('status-red');
+                        status.classList.add('status-green');
+                        document.getElementById('reader_status_text').inenrText = "Reader Online";   
+                    }
+                    else
+                    {
+                        var status = document.getElementById('reader_status');
+                        status.classList.remove('status-green');
+                        status.classList.add('status-red');
+                    }
+                });
+            fetch('/serial_running_writter')
+                .then(response => response.text())
+                .then(data => {
+                    if (data == 'Online')
+                    {
+                        var status = document.getElementById('writter_status');
+                        status.classList.remove('status-red');
+                        status.classList.add('status-green');
+
+                        fetch('/get_serial_info_update')  // Assume a Flask route to get updated data
+                            .then(response => response.json())
+                            .then(data => {
+                                updateLineChart(data);
+                            })
+                            .catch(error => {
+                                console.error('Error fetching data:', error);
+                            });
+                    }
+                    else
+                    {
+                        var status = document.getElementById('writter_status');
+                        status.classList.remove('status-green');
+                        status.classList.add('status-red');
+                    }
                 });
         }, 1000);  // Update every 1000 milliseconds (1 second)
     </script>
