--- a/src/host/templates/Command.html
+++ b/src/host/templates/Command.html
@@ -33,7 +33,7 @@
             border: 1px solid #ccc; 
             border-radius: 5px;
         }
-        .button_formatt {
+        .button_format {
             background-color: #4caf50;
             color: #fff;
             padding: 10px 20px;
@@ -130,14 +130,14 @@
             <tr class = "orange-text">
                 <th>Name</th>
                 <th>Path</th>
-                <th>Discription</th>
+                <th>Description</th>
             </tr>
             <tbody>
                 {% for item in table_data %}
                     <tr data-path ="{{ item.Path }}" onclick="update_run_arg_box(this)">
                         <td class = 'nice_teal'>{{ item.Name }}</td>
                         <td class = 'nice_teal'>{{ item.Path }}</td>
-                        <td class = 'nice_teal'>{{ item.Discription }}</td>
+                        <td class = 'nice_teal'>{{ item.Description }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -148,14 +148,14 @@
             <h2 class="green-text"> Run commands interface: </h2>
             <label class = "white-text" for="user_text">Enter args for commands (click on command in table):</label>
             <input type="text" id="commands_args" placeholder="Type Args...">
-            <button class = "button_formatt" onclick="send_run_request()">Submit</button>
+            <button class = "button_format" onclick="send_run_request()">Submit</button>
         </div>
         <div>
             <div class="box_style">
                 <h2 class="green-text">Send Commands to Serial Line: </h2>
                 <label class = "white-text" for="user_text">Enter hex stream (FF00A122 ...):</label>
                 <input type="text" id="user_hex_input" placeholder="Type hex...">
-                <button class = "button_formatt" onclick="send_serial_request()">Submit</button>
+                <button class = "button_format" onclick="send_serial_request()">Submit</button>
             </div>
         </div>
     </div>
@@ -165,7 +165,7 @@
             <div class="green-text" id="result">No return val yet.</div>
         </div>
         <div class="box_style">
-            <h2 class="green-text">The last serial command exicuted:</h2>
+            <h2 class="green-text">The last serial command executed:</h2>
             <div class="green-text" id="result_serial">No return val yet.</div>
         </div>
     </div>
